# phonecheck

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  REFACTORING.md
docs/: VERIFICATION.md
docs/research/: audio-resampling.md  fuzzy-matching-speech.md  graceful-shutdown.md  health-metrics.md  jitter-buffer.md  nat-traversal.md  packet-loss-concealment.md  retry-circuit-breaker.md  sip-dialog-state.md  sip-digest-auth.md  verification.md  voipms-api.md
scripts/: export_wav2vec2.py
src/: cli.rs  config.rs  embedding.rs  health.rs  lib.rs  main.rs  model_manager.rs  notify.rs  orchestrator.rs  redact.rs  scheduler.rs  speech.rs  stun.rs
src/rtp/: g711.rs  jitter.rs  mod.rs  player.rs  receiver.rs  recorder.rs  resample.rs
src/sip/: client.rs  digest.rs  messages.rs  mod.rs  model.rs  transport.rs
src/snapshots/: phonecheck__embedding__tests__audio_vs_reference_embedding.snap  phonecheck__embedding__tests__audio_vs_reference_embedding.snap.new  phonecheck__embedding__tests__cosine_similarity_768d.snap  phonecheck__embedding__tests__cosine_similarity_edge_cases.snap  phonecheck__embedding__tests__embedding_duration_sensitivity.snap  phonecheck__embedding__tests__normalized_vector_similarity.snap  phonecheck__embedding__tests__reference_embedding_format.snap  phonecheck__embedding__tests__reference_embedding_format.snap.new  phonecheck__embedding__tests__reference_self_similarity.snap  phonecheck__embedding__tests__reference_self_similarity.snap.new  phonecheck__embedding__tests__similarity_threshold_decisions.snap
tests/: adversarial_config.rs  adversarial_digest.rs  adversarial_g711.rs  adversarial_rtp.proptest-regressions  adversarial_rtp.rs  adversarial_sip_messages.rs  adversarial_speech.rs  integration_test.rs
verification/: README.md
verification/aeneas/: Cargo.toml  Proofs.lean
verification/aeneas/src/: lib.rs
verification/flux/: lib.rs
verification/verus/: Cargo.toml
verification/verus/src/: lib.rs
