[package]
name = "phonecheck"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# SIP protocol
rsip = "0.4"

# RTP and media
bytes = "1"

# Speech recognition (whisper.cpp bindings - requires cmake)
whisper-rs = "0.15"

# HTTP client for voip.ms API
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Environment/config
dotenvy = "0.15"

# Scheduling
tokio-cron-scheduler = "0.13"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling with timezone
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Error handling
thiserror = "2"
anyhow = "1"

# Random for SIP Call-ID, tags, etc.
rand = "0.8"

# URL encoding for SMS API
urlencoding = "2"

# STUN client for NAT traversal
stun_codec = "0.3"
bytecodec = "0.4"

# Async utilities (CancellationToken for graceful shutdown)
tokio-util = "0.7"

# Digest authentication (RFC 2617/7616)
md-5 = "0.10"
digest = "0.10"

# High-quality audio resampling
rubato = "0.16"

# Packet capture (optional, requires libpcap)
pcap = { version = "2.4", optional = true }

[features]
default = []
record = ["pcap"]

[dev-dependencies]
# For reading pcap files in tests (no libpcap required)
pcap-file = "2"
# Property-based testing
proptest = "1"

# Test utilities
tokio-test = "0.4"

# Model checking for state machines
stateright = "0.31"

# Formal verification (run with: cargo kani)
# Install: cargo install kani-verifier && cargo kani setup
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
