[package]
name = "phonecheck"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Speech recognition (whisper.cpp bindings - requires cmake)
whisper-rs = "0.15"

# HTTP client for Pushover API
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Environment/config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling with timezone
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Error handling
anyhow = "1"

# Random for SIP Call-ID, tags, etc.
rand = "0.8"

# Async utilities (CancellationToken for graceful shutdown)
tokio-util = "0.7"

# Digest authentication (RFC 2617/7616)
md-5 = "0.10"
digest = "0.10"

# High-quality audio resampling
rubato = "0.16"
fs2 = "0.4.3"

# WAV file writing (for audio debugging/testing)
hound = "3.5"

# ONNX Runtime for wav2vec2 embeddings (statically linked)
ort = { version = "2.0.0-rc.11", features = ["ndarray"] }
ndarray = "0.17"

[dev-dependencies]
# Property-based testing
proptest = "1"

# Test utilities
tokio-test = "0.4"

# Model checking for state machines
stateright = "0.31"

# Formal verification (run with: cargo kani)
# Install: cargo install kani-verifier && cargo kani setup
[profile.release]
lto = true
codegen-units = 1

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
