[package]
name = "phonecheck-aeneas"
version = "0.1.0"
edition = "2021"

# This crate contains simplified Rust code for Aeneas translation.
# To verify:
#   1. Install Aeneas: https://github.com/AeneasVerif/aeneas
#   2. Run: aeneas -backend lean4 src/lib.rs -dest Generated.lean
#   3. Write proofs in Lean 4 (see Proofs.lean)

[dependencies]
# No dependencies - keep code simple for Aeneas translation
